static/css/style.css
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
 /** Header **/
 .my_header {
    background-color: #388e3c;
    font-family: 'Poppins', sans-serif;
}

nav .title {
    padding-left: 20px;
}

.my_header i {
    padding: 0;
    margin-right: 2px;
}

/** Hero Image **/
.main_image {
background-image: url("../images/background1.jpg"); 
  background-color: #f57c00; 
  height: 500px;
  background-position: center;
  background-repeat: no-repeat; 
  background-size: cover;
  align-content: center;
  position: relative;
}

.text {
    
    font-family: 'Poppins', sans-serif;
    
    letter-spacing: 3px;
    width: 800px;
    height: 400px;

    background-color: rgba(56, 142, 60, 0.6);
    align-content: center;
    margin: 0 auto;
    position: absolute;
  top: 50%;
  left: 50%;
  
  transform: translate(-50%, -50%);
}

.text h1, h4 {
    color: #ffffff;
    text-align: center;
}

.text h1 {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 9em;
}

/** Footer **/
footer {
    background-color: #388e3c;
    line-height: 50px;
    
}

.footer_text {
    color: #ffffff; 
    font-family: 'Poppins', sans-serif;
    margin: 10px;
    padding: 5px;
}

/** Main Page Category Select Area **/
.category_title h3 {
    font-weight: bold;
    padding-top: 10px;
    padding-left: 20px;
}

.select1 {
    padding-left: 20px;
}

p {
    padding-left: 20px;
}

.category_picture {
    height: 300px;
    width: 400px;
    overflow: hidden;
    
}

.category_picture img {
    width:  400px;
    height: auto;
    padding-right: 20px;
}

/** Form **/

#add_recipe_title{
    color: #f57c00;
    text-align: center;
}

.add_recipe_form label {
    font-family: 'Poppins', sans-serif;
    font-size: large;
}

.form_buttons {
    background-color: #f57c00;
}

.form_buttons:hover {
    background-color: #bb4d00;
}

